trybuild-qcell/src/compiletest/lcell-04.stderr
error[E0499]: cannot borrow `owner` as mutable more than once at a time
  --> src/compiletest/lcell-04.rs:12:24
   |
11 |         let c1mutref = owner.rw(&c1);
   |                        ------------- first mutable borrow occurs here
12 |         let c2mutref = owner.rw(&c2);  // Compile error
   |                        ^^^^^^^^^^^^^ second mutable borrow occurs here
13 |         *c1mutref += 1;
   |         -------------- first borrow later used here
